logs/hurry.datatables.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hurry'...
Listing './lib/python3.5/site-packages/hurry/datatables'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/AutoFill'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/AutoFill/media'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/AutoFill/media/css'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/AutoFill/media/docs'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/AutoFill/media/images'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/AutoFill/media/js'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/ColReorder'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/ColReorder/media'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/ColReorder/media/css'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/ColReorder/media/docs'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/ColReorder/media/images'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/ColReorder/media/js'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/ColVis'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/ColVis/media'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/ColVis/media/css'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/ColVis/media/docs'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/ColVis/media/docs_private'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/ColVis/media/images'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/ColVis/media/js'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/FixedColumns'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/FixedColumns/media'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/FixedColumns/media/docs'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/FixedColumns/media/js'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/FixedHeader'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/FixedHeader/js'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/KeyTable'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/KeyTable/js'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/TableTools'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/TableTools/media'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/TableTools/media/ZeroClipboard'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/TableTools/media/css'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/TableTools/media/docs'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/TableTools/media/images'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/TableTools/media/js'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/extras/TableTools/media/swf'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/media'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/media/css'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/media/images'...
Listing './lib/python3.5/site-packages/hurry/datatables/datatables-build/media/js'...
Listing './lib/python3.5/site-packages/hurry/jquery'...
Listing './lib/python3.5/site-packages/hurry/jquery/jquery-build'...
Compiling './lib/python3.5/site-packages/hurry/jquery/prepare.py'...
***   File "./lib/python3.5/site-packages/hurry/jquery/prepare.py", line 32
    print 'recursively removing "%s"' % jquery_dest_path
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hurry/resource'...
Listing './lib/python3.5/site-packages/hurry.datatables-1.7.6.egg-info'...
Listing './lib/python3.5/site-packages/hurry.jquery-1.4.3.1.egg-info'...
Listing './lib/python3.5/site-packages/hurry.resource-0.10.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
